Alteração de Caixa de texto
Mudança no texto, requisitada pelo GD

--- a/projeto git/Layouts/Layout 1.xml
+++ b/projeto git/Layouts/Layout 1.xml
@@ -51,7 +51,7 @@
                 </instance>
                 <instance type="Text" uid="8">
                     <properties>
-                        <text>Hello world</text>
+                        <text>Eita mulestia!</text>
                         <initial-visibility>Visible</initial-visibility>
                         <font>Arial,-16</font>
                         <color>0,0,0</color>
